[package]
name = "currency"
version = "0.1.0"
authors = ["Géraud Le Falher <daureg@gmail.com>"]

[dependencies]
hyper = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
clippy = "*"
chrono = "*"
term_grid = "*"
ansi_term = "*"

[dependencies.clap]
version = "*"
default-features = false
features = ["color", "yaml"]
